fixed styling on footer. The page behaves properly now when less than a page of results is shown. Had some janky scrollbars making the page jumpy

--- a/client/src/styles/CatNav.css
+++ b/client/src/styles/CatNav.css
@@ -20,4 +20,5 @@ a.navbar-brand:hover{
 	background-color: #002d39;
 	opacity: 75%;
 	background-blend-mode: multiply;
+	overflow: hidden;
 }
